# go-trident

./: LICENSE  README
trident/: tridentConfig.cmake  tridentConfigVersion.cmake
trident/cmake/: files_and_directories.cmake
trident/cmake/templates/: trident_config.template.h
trident/demo/: ipc_wire.cfg
trident/src/: CMakeLists.txt
trident/src/trident/: def.h  errno.h  fileList.txt  log.h  trident.c  trident.h  types.h  util.h  word.c  word.h
trident/src/trident/layer0/: error.h  fileList.txt  layer0.h  layer0_types.h  message.h
trident/src/trident/layer0/raspbian/: error.c  fileList.txt  layer0.c  message.c
trident/src/trident/layer0/simulation/: error.c  fileList.txt  layer0.c  message.c  pin_descriptor.h
trident/src/trident/layer1/: fileList.txt  layer1.c  layer1.h  layer1_result_types.h  layer1_types.h  receiver_fsm.c  receiver_fsm.h  sender_fsm.c  sender_fsm.h
trident/src/trident/layer1/barrier/: fileList.txt  receiver_barrier.c  receiver_barrier.h  sender_barrier.c  sender_barrier.h  synchronization_barriers.c  synchronization_barriers.h
trident_application/: buildall.sh  source_folders.txt
trident_application/get_pin/: CMakeLists.txt  main.c
trident_application/get_pin_cont/: CMakeLists.txt  main.c
trident_application/init_pin/: CMakeLists.txt  main.c
trident_application/multichannel_loop/: CMakeLists.txt  main.c  simulation_ipc_wire.cfg
trident_application/pingpong/: CMakeLists.txt  main.c
trident_application/pingpong/peer/: CMakeLists.txt  main.c
trident_application/pingpong_benchmark/: CMakeLists.txt  gather_data.sh  main.c
trident_application/pingpong_benchmark/peer/: CMakeLists.txt  main.c  peer_data.sh
trident_application/pingpong_stresstest/: CMakeLists.txt  main.c  stresstest.sh
trident_application/pingpong_stresstest/peer/: CMakeLists.txt  main.c  stresstest_peer.sh
trident_application/receive_word/: CMakeLists.txt  main.c
trident_application/reset_barrier_controller/: CMakeLists.txt  main.c
trident_application/send_word/: CMakeLists.txt  main.c
trident_application/set_pin/: CMakeLists.txt  main.c
